# labdados-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  pyproject.toml  test copy.ipynb  test.ipynb
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: _quarto.yml  api-key.qmd  getting-started.qmd  index.qmd  modo-local.qmd  objects.json
docs/exemplos/: analise_viabilidade.qmd  estruturacao.qmd  ocr.qmd  transcricao.qmd
examples/: 01_ocr_pasta_nuvem.py  02_ocr_local.py  03_transcricao_diarizacao.py  04_estruturacao_csv.py  05_analise_viabilidade.py  06_analise_viabilidade_local.py
examples/notebooks/: analise_viabilidade.ipynb  estruturacao.ipynb  ocr.ipynb  transcricao.ipynb
resultados_labdados/: organograma.txt
src/labdados/: __init__.py  _io.py  _progress.py  analise_viabilidade.py  anonimizacao.py  client.py  estruturacao.py  exceptions.py  ocr.py  transcricao.py
tests/: test_smoke.py
