[project]
name = "labdados"
version = "0.7.1"
description = "SDK Python para os serviços do escritório de apoio do LabDados / FGV Direito SP — OCR, transcrição, estruturação com LLMs e análise de viabilidade. Roda em modo nuvem (com API key) ou local."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "LabDados / FGV Direito SP", email = "labdados.direitosp@fgv.br" },
]
requires-python = ">=3.11"
keywords = [
    "labdados",
    "fgv",
    "direito",
    "ocr",
    "transcrição",
    "whisper",
    "llm",
    "estruturação",
    "viabilidade",
    "tribunais",
    "datajud",
    "jurisprudência",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Único requisito do modo nuvem — usado para chamar a API REST e baixar
    # arquivos do Azure Blob via SAS URL.
    "httpx>=0.27,<1.0",
    "pymupdf>=1.27.2.3",
]

# Notas:
# - O modo nuvem é coberto apenas pelas deps acima (httpx + pymupdf).
# - Cada extra abaixo cobre um serviço no modo `local=True`. Os extras
#   tiram do `labdados-core` apenas o que for genuinamente compartilhado
#   com o backend (hoje, só viabilidade).

[project.optional-dependencies]
# OCR local: pipeline (pymupdf+tesseract, deskew, BW fallback, tesseract
# discovery no Windows) vive em labdados-core[ocr-cpu]. O extra do core
# ja traz pymupdf, pytesseract e Pillow — nao duplicar aqui.
ocr = [
    "labdados-core[ocr-cpu]>=0.9,<1.0",
]
# Transcrição local: faster-whisper roda em CPU ou GPU CUDA (se disponível).
# WhisperX (com diarização) tem deps pesadas e fica fora do extra "leve" —
# documentado mas não é instalado automaticamente.
# Os formatters de saída (SRT/VTT/TXT) vêm do core para não divergir do
# que o serviço no escritório produz.
transcricao = [
    "faster-whisper>=1.0",
    "labdados-core>=0.9,<1.0",
]
# Estruturação local: pipeline + cliente OpenAI-compatível vivem em
# labdados-core (compartilhado com o backend, sem chance de divergir
# em prompt ou parsing). O extra do core já traz openai e openpyxl.
estruturacao = [
    "labdados-core[estruturacao]>=0.9,<1.0",
]
# Análise de viabilidade local: usa ``labdados-core`` — o pacote núcleo
# que o backend também consome (mesmas regras de veredito, mesmo template
# do relatório, sem chance de divergir).
viabilidade = [
    "labdados-core>=0.9,<1.0",
]
all = [
    "labdados[ocr,transcricao,estruturacao,viabilidade]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "respx>=0.21",
]
docs = [
    # ``griffe>=2.0`` removeu o kwarg ``allow_section_blank_line`` que o
    # ``quartodoc`` ainda passa — quebra com ``TypeError`` em
    # ``parse_numpy()``. Pinamos griffe<2 até quartodoc se atualizar.
    # Issue de referência: machow/quartodoc.
    "quartodoc>=0.11",
    "griffe>=1.5,<2.0",
]

[project.urls]
Homepage = "https://labdados-frontend.livelydesert-3e3e3dd8.brazilsouth.azurecontainerapps.io"
Documentation = "https://lab-dados.github.io/labdados-sdk"
Repository = "https://github.com/lab-dados/labdados-sdk"
Issues = "https://github.com/lab-dados/labdados-sdk/issues"
Changelog = "https://github.com/lab-dados/labdados-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labdados"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
